[gd_scene load_steps=3 format=3 uid="uid://cdgvwyvsqhvsd"]

[ext_resource type="Script" path="res://questions/dialog.gd" id="1_dn6bm"]
[ext_resource type="Texture2D" uid="uid://dsuwg5glm7frq" path="res://assets/dialogbox.png" id="2_v8mek"]

[node name="dialogBox" type="Node2D"]
light_mask = 16
visibility_layer = 2
script = ExtResource("1_dn6bm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 624.0
offset_bottom = 203.0
texture = ExtResource("2_v8mek")
region_rect = Rect2(9, 20, 75, 98)
patch_margin_left = 24
patch_margin_top = 28
patch_margin_right = 64
patch_margin_bottom = 86

[node name="question" type="TextEdit" parent="."]
offset_left = 11.0
offset_top = 7.0
offset_right = 600.0
offset_bottom = 119.0
theme_override_colors/background_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
editable = false
wrap_mode = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="submit" type="Button" parent="."]
offset_left = 552.0
offset_top = 126.0
offset_right = 614.0
offset_bottom = 157.0
text = "submit"

[node name="answer" type="TextEdit" parent="."]
offset_left = 12.0
offset_top = 126.0
offset_right = 546.0
offset_bottom = 159.0
text = "my name is shereyas"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="submit" to="." method="_on_submit_button_down"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
